tests/baselines/reference/emitter.asyncGenerators.functionDeclarations.es5(strict=true).errors.txt
F2.ts(2,15): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
F3.ts(2,15): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== F1.ts (0 errors) ====
    async function * f1() {
    }
==== F2.ts (1 errors) ====
    async function * f2() {
        const x = yield;
                  ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }
==== F3.ts (1 errors) ====
    async function * f3() {
        const x = yield 1;
                  ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    }
==== F4.ts (0 errors) ====
    async function * f4() {
        const x = yield* [1];
    }
==== F5.ts (0 errors) ====
    async function * f5() {
        const x = yield* (async function*() { yield 1; })();
    }
==== F6.ts (0 errors) ====
    async function * f6() {
        const x = await 1;
    }
==== F7.ts (0 errors) ====
    async function * f7() {
        return 1;
    }
    